--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,11 +17,9 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
       - name: Publish Library
         run: |
-          echo ${{ github.ref }}
-          GRADLE_REPORTED_VERSION=$(./gradlew printVersion -q)
-          echo $GRADLE_REPORTED_VERSION
-          if [ "${{ github.ref }}" != "refs/tags/$GRADLE_REPORTED_VERSION" ]; then
-            echo "Error: Release tag and gradle version are not equal."
+          GRADLE_REPORTED_VERSION="refs/tags/$(./gradlew printVersion -q)"
+          if [ ${{ github.ref }} != $GRADLE_REPORTED_VERSION ]; then
+            echo "Error: Release tag (${{ github.ref }}) and gradle version ($GRADLE_REPORTED_VERSION) are not equal."
             exit 1
           fi
           ./gradlew assemble publishAndReleaseToMavenCentral --no-configuration-cache --no-parallel
